Objects/clinic/codeobject.c.h
@@ -41,7 +41,8 @@ code_new(PyTypeObject *type, PyObject *args, PyObject *kwargs)
     PyObject *freevars = NULL;
     PyObject *cellvars = NULL;
 
-    if ((type == &PyCode_Type) &&
+    if ((type == &PyCode_Type ||
+         type->tp_init == PyCode_Type.tp_init) &&
         !_PyArg_NoKeywords("code", kwargs)) {
         goto exit;
     }
@@ -373,4 +374,4 @@ skip_optional_kwonly:
 exit:
     return return_value;
 }
-/*[clinic end generated code: output=a272b22f63ea002e input=a9049054013a1b77]*/
+/*[clinic end generated code: output=57903155b65da8c9 input=a9049054013a1b77]*/
